--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <h1>Bootstrap Buttons</h1>
+    <button type="button" id="button-1" class="btn btn-primary s">
+      Button - 1
+    </button>
+    <button type="button" id="button-2" class="btn btn-outline-secondary">
+      Button - 2
+    </button>
+    <button type="button" id="button-3" class="btn btn-success btn-lg">
+      Button - 3
+    </button>
+    <button type="button" id="button-4" class="btn btn-danger btn-sm">
+      Button - 4
+    </button>
+    <button type="button" id="button-5" class="btn btn-warning btn-lg vw-100">
+      Button - 5
+    </button>
+    <button type="button" id="button-6" class="btn btn-info disabled">
+      Button - 6
+    </button>
+    <button type="button" id="button-7" class="btn btn-light">
+      Button - 7
+    </button>
+    <button type="button" id="button-8" class="btn btn-link">Button - 8</button>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
